# mapack

./: .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml
app/: cli.py
config/: __init__.py  expressions.py  parser.py  templating.py
core/: __init__.py  interpreter.py  runtime.py
examples/: shelves.jsonc
schemas/: export.json
transforms/: __init__.py  base.py  conditional.py  copy.py  git_ops.py  log.py  mc_feature.py  registry.py
